Major refactoring and optimization patch